fixing layout issues again

--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -15,7 +15,7 @@
 	outline: none;
 }
 .slides, .flex-control-nav, .flex-direction-nav {
-	margin: 0;
+	margin: 0px;
 	padding: 0;
 	list-style: none;
 }
@@ -85,7 +85,7 @@ html[xmlns] .slides {
 .flex-control-nav {
 	width: 100%;
 	position: absolute;
-	bottom: -40px;
+	bottom: 0px;
 	text-align: center;
 }
 .flex-control-nav li {
