--- a/css/style.css
+++ b/css/style.css
@@ -375,8 +375,8 @@ blockquote.pull-right {
 /*----- 2.1 Commons  -----*/
 /*----------------------------------------*/
 .content-top {
-	margin-top: 30px;
-	margin-bottom: 30px;
+	/*margin-top: 30px;
+	margin-bottom: 30px;*/
 	position: relative;
 }
 .relativeto {
